# rustencils

./: Cargo.toml
src/: grid.rs  lib.rs  operator.rs  stencil.rs
