[package]
name = "rustencils"
version = "0.1.2"
authors = ["agilman0803 <agilman@princeton.edu>"]
edition = "2018"
description = "A work in progress trying to build modular and extenisble differential equation solver using stencils for finite difference methods."
license = "MIT OR GPL-3.0+"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-linalg = "0.13.1"
factorial = "0.2.1"
